--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -1,64 +1,62 @@
 *{
-    padding: 0;
-    margin: 0;
+    margin:0;
+    padding:0;
     box-sizing: border-box;
-    font-family: sans-serif;
-}
-
-.btn-menu{
-    display: none;
-}
-
-.menu{
-    display: flex;
-    width: 100%;
-}
-
-.logo{
-    padding: 1%;
-}
-
-.menu-container{
-    display: flex;
-    outline: solid 1px black;
-    padding: 1% 2%;
-    background: #292f33;
-    color: #fff;
-}
-
-.menu-content{
-    display: flex;
-    width: 100%;
-    position: sticky;
-    justify-content: space-around;
-    list-style: none;
-    align-items: center;
-}
-
-.menu-content li{
     text-decoration: none;
-    font-size: 120%;
 }
 
-.searchbox{
-    outline: none;
-    border: none;
-    width: 95%;
-    height: 30px;
-    border-radius: 33px;
-    padding: 0 2%;
+.wrapper{
+    background: #171c24;
+    position: sticky;
+    width: 100%;
 }
 
-.menu-search{
-    background: #fff;
+.wrapper nav{
+    display: flex;
+    max-width: calc(100% - 200px);
+    margin: 0 auto;
+    height: 70px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav .content{
     display: flex;
     align-items: center;
-    width: 40%;
-    border-radius: 33px;
+}
+
+.content .links li{
+    list-style: none;
+}
+
+nav .content .links{
+    margin-left: 80px;
+    display: flex;
 
 }
 
-.icon{
-    color: black;
+.content .links li p{
+    color: #fff;
+    font-size: 30px;
+    font-weight: 500;
+    padding: 9px 17px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
 }
 
+.content .links li:hover p{
+    background: #323c4e;
+
+}
+
+.wrapper .search-icon{
+    color: #fff;
+
+}
+
+.wrapper .search-box{
+    position: absolute;
+    height: 100%;
+    max-width: calc(100% - 50px);
+    width: 100%;
+}
