--- a/src/Components/UI/HomeCover/HomeCover.css
+++ b/src/Components/UI/HomeCover/HomeCover.css
@@ -1,6 +1,6 @@
 .text-container{
-    width: 50%;
-    padding: 2% 3% 2% 7%;
+    width: 100%;
+    padding: 2% 5%;
 }
 
 .title{
@@ -15,11 +15,62 @@
 }
 
 .button-more{
-    margin: 2% 0 0 0;
+    margin: 7% 0 0 0;
     padding: 2% 20% 2% 2%;
     font-size: 110%;
     border: none;
     outline: none;
     background: #111;
     color: #fff;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.button-more:hover{
+    color: rgb(136,136,136);
+}
+
+@media screen and (max-width: 900px){
+    .text-container{
+       width: 70%;
+       margin: auto;
+    }
+
+    .text{
+        margin: 0 2%;
+        font-size: 130%;
+        font-weight: bolder;
+    }
+
+    .button-more{
+        margin: 4% auto 0 auto;
+        width: 100%;
+        text-align: center;
+        padding: 2% 0;
+    }
+}
+
+@media screen and (max-width: 400px){
+    .text-container{
+        width: 100%;
+    }
+
+    .title{
+        width: 100%;
+        font-size: 250%;
+        margin: 4% auto;
+        text-align: center;
+    }
+
+    .text{
+        padding: 1% 7%;
+        margin: 0 0 5% 0;
+    }
+
+    .button-more{
+        width: 100%;
+        padding: auto;
+        margin: 5% auto;
+        text-align: center;
+    }
 }
