--- a/src/Components/UI/HomeImgCover/HomeImgCover.css
+++ b/src/Components/UI/HomeImgCover/HomeImgCover.css
@@ -1,5 +1,5 @@
 .img-container{
-    width: 50%;
+    width: 100%;
     height: auto;
 }
 
@@ -7,4 +7,10 @@ img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+@media screen and (max-width: 900px){
+    .img-container{
+        display: none;
+    }
 }
