--- a/src/Components/UI/HomeCover/HomeCover.css
+++ b/src/Components/UI/HomeCover/HomeCover.css
@@ -6,17 +6,19 @@
 .title{
     font-size: 500%;
     line-height: 120%;
+    margin: 5% 0 ;
 }
 
 .text{
-    padding: 1%;
+    padding: 1 2%;
     text-align: justify;
-    font-size: 100%;
+    font-size: 150%;
+    line-height: 160%;
 }
 
 .button-more{
     margin: 7% 0 0 0;
-    padding: 2% 20% 2% 2%;
+    padding: 2% 30% 2% 2%;
     font-size: 110%;
     border: none;
     outline: none;
