--- a/src/Components/UI/LoginCover/LoginCover.css
+++ b/src/Components/UI/LoginCover/LoginCover.css
@@ -1,10 +1,5 @@
-.img-login-container{
-    width: 100%;
-    height: 100%;
-}
-
-.img-login{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+@media screen and (max-width: 899px){
+    .img-login-container{
+        display: none;
+    }
 }
