--- a/src/Components/UI/RegisterCover/RegisterCover.css
+++ b/src/Components/UI/RegisterCover/RegisterCover.css
@@ -1,10 +1,11 @@
-/* .img-Register-container{
-    width: 100%;
+.img-register-container{
+    width: 142%;
     height: 100%;
-} */
+}
 
 @media screen and (max-width: 899px){
-    .img-Register-container{
+    .img-register-container{
         display: none;
     }
 }
+
