--- a/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
+++ b/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
@@ -1,17 +1,15 @@
 .anouncement-container{
-    outline: solid 1px red;
     display: flex;
     height: auto;
 }
 
 .anouncement-info{
-    outline: solid 1px green;
-    width: 50%;
+    width: 40%;
+    padding: 2% 5%;
 }
 
 .anouncement-images{
-    width: 50%;
-    outline: solid 1px grey;
+    width: 60%;
     padding: 2% 5%;
 }
 
@@ -43,4 +41,45 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.anouncement-info-add{
+    outline: solid 1px red;
+    margin: 3% 0;
+    display: flex;
+    justify-content: space-around;
+    padding: 2% 4% ;
+}
+
+.info-text{
+    
+    padding: 1% 0;
+    text-align: center;
+}
+
+.info-title{
+    margin: 2% 0;
+}
+
+.info-subtitle{
+    margin: 2% 0;
+
+}
+
+.action-buttons{
+    display: flex;
+    justify-content: center;
+    margin: 10% 0;
+}
+
+.action-button-profile{
+    margin: 0 2%;
+    padding: 2% 10%;
+    background-color: rgb(255, 255, 255);
+    color: rgba(0, 0, 0, 0.54);
+    box-shadow: rgb(0 0 0 / 24%) 0px 2px 2px 0px, rgb(0 0 0 / 24%) 0px 0px 1px 0px;
+    border-radius: 2px;
+    border: 1px solid transparent;
+    font-size: 14px;
+    font-weight: 500;  
 }
