--- a/src/Components/Layout/ForgotPasswordForm/ForgotPassword.css
+++ b/src/Components/Layout/ForgotPasswordForm/ForgotPassword.css
@@ -1,30 +1,24 @@
 .forgot-password-container{
-    outline: solid 1px red;
     width: 35%;
-    padding: 3% 4% 4% 4%;
-    
+    padding: 3% 4% 2% 4%;
+    -webkit-box-shadow: 5px 5px 4px 2px rgba(0,0,0,0.95); 
+    box-shadow: 5px 5px 4px 2px rgba(0,0,0,0.95);
+    background: #FFFFFF;
 }
 
 .body-container{
     width: 100%;
     height: 100vh;
-    outline: solid 1px red;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.logo-container{
-    display: flex;
-    align-items: center;
-    justify-content:start;
-    width: 100%;
-    gap: 1%;
+    background: rgb(110,217,182);
+    background: linear-gradient(90deg, rgba(110,217,182,0.87718837535014) 53%, rgba(111,161,126,1) 100%);
 }
 
 .forgot-title{
     margin: 4% 0;
-    width: 50%;
+    width: 60%;
 }
 
 
@@ -38,7 +32,7 @@
 
 .create-account{
     display: flex;
-    gap: 1%;
+    width: 80%;
     margin: 2% 0;
 }
 
@@ -49,7 +43,56 @@
 }
 
 .send-email{
-    padding: 2% 7%;
-    margin: 7% 0 0 auto;
+    padding: 2%;
+    width: 40%;
+    margin: 4% 0 0 0;
+    background-color: rgba(111,161,126,1);
+    color: #FFFFFF;
+    border: none;
+}
 
+.send-content{
+    width: 100%;
+    display: flex;
+    justify-content: end;
+}
+
+.send-register{
+    font-size: 80%;
+    text-decoration: underline;
+    width: 120%;
+    padding: 0 5%; 
+}
+
+@media screen and (max-width: 1250px){
+    .forgot-password-container{
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 900px){
+    .forgot-password-container{
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 800px){
+    .forgot-password-container{
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .forgot-password-container{
+        width: 90%;
+    }
+
+    .forgot-title{
+        font-size: 90%;
+    }
+
+    .create-account{
+        font-size: 90%;
+        margin: 1% 1%;
+    }
 }
