--- a/src/Components/Layout/ForgotPasswordForm/ForgotPasswordForm.css
+++ b/src/Components/Layout/ForgotPasswordForm/ForgotPasswordForm.css
@@ -1,8 +1,8 @@
 .forgot-password-container{
     width: 35%;
     padding: 3% 4% 2% 4%;
-    -webkit-box-shadow: 5px 5px 4px 2px rgba(0,0,0,0.95); 
-    box-shadow: 5px 5px 4px 2px rgba(0,0,0,0.95);
+    -webkit-box-shadow: 5px 5px 4px 2px rgba(0,0,0,0.60); 
+    box-shadow: 5px 5px 4px 2px rgba(0,0,0,0.60);
     background: #FFFFFF;
 }
 
@@ -18,7 +18,7 @@
 
 .forgot-title{
     margin: 4% 0;
-    width: 60%;
+    width: 90%;
 }
 
 
@@ -49,6 +49,14 @@
     background-color: rgba(111,161,126,1);
     color: #FFFFFF;
     border: none;
+    cursor: pointer;
+    transition: ease .3s;
+}
+
+.send-email:hover {
+    
+    transform: scale(105%);
+    
 }
 
 .send-content{
@@ -61,7 +69,8 @@
     font-size: 80%;
     text-decoration: underline;
     width: 120%;
-    padding: 0 5%; 
+    padding: 0 5%;
+    
 }
 
 @media screen and (max-width: 1250px){
