--- a/src/Components/Layout/FormSingUp/FormSingUp.css
+++ b/src/Components/Layout/FormSingUp/FormSingUp.css
@@ -1,11 +1,97 @@
 .form-register-valid{
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center;
+    background:  linear-gradient(90deg, rgba(154,204,207,0.75718837535014) 50%, rgba(17,50,136,0.65) 100%),url("https://cdn.pixabay.com/photo/2018/03/19/18/46/driveway-3240834_960_720.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .register-valid-info{
-    outline: solid 1px red;
-    width: 35%;
+    margin: 5%;
+    width: 40%;
+    text-align: center;
+    padding: 2% 0;
+    background: #FFFFFF;
+    border-radius: 5px;
+    -webkit-box-shadow: 1px 7px 11px 1px rgba(55,55,55,0.85); 
+    box-shadow: 1px 7px 11px 1px rgba(55,55,55,0.85);
+}
+
+.info-register{
+    text-align: center;
+    padding:  0 0 2% 0;
+}
+
+.info-input-register{
+    width: 80%;
+    padding: 2% 2%;
+    margin: 3% 0;
+    border-radius: 5px;
+    border: solid .1px rgba(136,136,136,0.60);
+}
+
+.info-input-register:focus{
+    outline: 1px solid #1C6EA4;
+}
+
+.add-register-info{
+    display: flex;
+    width: 80%;
+    margin: 2% auto 3% auto;
+    gap: 2%;
+}
+
+.info-input-add{
+    width: 100%;
+    padding: 2% 2%;
+    border-radius: 5px;
+    border: solid .1px rgba(136,136,136,0.60);
+}
+
+.info-input-add:focus{
+    outline: 1px solid #1C6EA4;
+}
+
+.department-info{
+    width: 80%;
+    margin: 2% auto;
+    display: flex;
+    gap: 2%;
+}
+
+.register-submit{
+    width: 80%;
+    padding: 2%;
+    background: #9ACCCF;
+    background: -moz-linear-gradient(left, #9ACCCF 0%, #1C6EA4 100%, #113288 100%);
+    background: -webkit-linear-gradient(left, #9ACCCF 0%, #1C6EA4 100%, #113288 100%);
+    background: linear-gradient(to right, #9ACCCF 0%, #1C6EA4 100%, #113288 100%);
+    border: none;
+    border-radius: 5px;
+    color: #FFFFFF;
+    font-size: 100%;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.register-submit:hover{
+    transform: scale(102%);
+}
+
+.separator-container{
+    display: flex;
+    width: 80%;
+    margin: 4% auto 0 auto;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.line-separator{
+    width: 40%;
+    height: 1px;
+    border: solid .1px grey;
 }
