--- a/src/Components/UI/SelectDepartment/SelectDepartment.css
+++ b/src/Components/UI/SelectDepartment/SelectDepartment.css
@@ -1,7 +1,11 @@
-.selector{
-    border: .1px solid grey;
-    border-radius: none;
-    width: 48%;
-    padding: 2% 0;
-    outline: none;
+.select-department{
+    border-radius: 5px;
+    border: solid .1px rgba(136,136,136,0.60);
+    width: 100%;
+    padding: 2% 2%;
+    color: rgba(116,116,116);
+}
+
+.select-department:focus{
+    outline: 1px solid #1C6EA4;
 }
