--- a/src/Components/Layout/FormLogin/FormLogin.css
+++ b/src/Components/Layout/FormLogin/FormLogin.css
@@ -2,14 +2,25 @@
 
 .login-form{
     width: 100%;
+    height: 100vh;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    background:  linear-gradient(90deg, rgba(154,204,207,0.75718837535014) 50%, rgba(17,50,136,0.65) 100%),url("https://cdn.pixabay.com/photo/2018/03/19/18/46/driveway-3240834_960_720.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
-.form-text{
-    width: 100%;
+
+.login-valid-info{
+    width: 40%;
     text-align: center;
-    padding: 3% 0;
-    background: #fff;
+    padding: 2% 0;
+    background: #FFFFFF;
+    border-radius: 5px;
+    -webkit-box-shadow: 1px 7px 11px 1px rgba(55,55,55,0.85); 
+    box-shadow: 1px 7px 11px 1px rgba(55,55,55,0.85);
 }
 
 .facebook-auth{
@@ -21,9 +32,7 @@
     border: 1px solid transparent;
     font-size: 14px;
     font-weight: 500;
-    cursor: pointer;
-    
-    
+    cursor: pointer;  
 }
 
 .facebook-icon{
@@ -32,70 +41,42 @@
     color: #3b5998;
 }
 
-.separator{
-    margin: 6% 0;
-    width: 100%;
-    justify-content: center;
+.remember-password{
     display: flex;
     align-items: center;
+    gap: 2%;
+    justify-content: center;
+    margin: 0 0 4% 0;
 }
 
-.or{
-    margin: 0 2%;
-    font-size: 120%;
-    font-weight: bolder;
+.login-forgot-password{
+    margin: 2%;
+    text-decoration: underline;
+    font-size: 80%;
 }
 
-.line{
-    width: 30%;
-    height: .1px;
-    background: grey;
-}
-
-.info{
-    
-    text-align: start;
-    width: 60%;
-    margin: auto;
-}
-
-.info-input{
-    margin: 2% 0;
+.create-account-login{
     width: 100%;
-    padding:2% 0;
-    outline:solid 1px grey;
-    border:none;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
 }
 
-.remember-password{
-    width: 60%;
-    margin: auto;
-    text-align: start;
-    align-items: center;
+.create-account-link{
+    margin: 0 10%;
+    font-size: 85%;
+    width: 100%;
+    text-decoration: underline;
 }
-
-.remember-check{
-    margin: 0 1% 0 0;
-    padding: 5%;
-}
-
-.forgot-password{
-    margin: auto;
-    width: 60%;
-}
-
-.login-submit{
-    font-size: 100%;
-    padding: 2% 30%;
-    margin:5% 0;
-}
-
-
 
 @media screen and (max-width: 900px){
-    .link-icon{
-        font-size: 90%;
+    .login-valid-info{
+        width: 70%;
     }
-    
 }
 
+@media screen and (max-width: 450px){
+    .login-valid-info{
+        width: 90%;
+    }
+}
