--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -7,7 +7,6 @@
   font-family: 'Poppins', sans-serif;
 }
 .wrapper{
-  background: #171c24;
   position: fixed;
   width: 100%;
 }
@@ -50,10 +49,9 @@ nav .content .links{
 .content .links li label{
   display: none;
 }
-.content .links li p:hover,
+/* .content .links li p:hover,
 .content .links li label:hover{
-  background: #323c4e;
-}
+} */
 .wrapper .search-icon,
 .wrapper .menu-icon{
   color: #fff;
@@ -88,26 +86,34 @@ nav .content .links{
   border: none;
   outline: none;
   font-size: 17px;
-  color: #fff;
-  background: #171c24;
+  color: rgb(80,80,80);
   padding: 0 100px 0 15px;
+  border-radius: 5px;
 }
 .search-box input::placeholder{
-  color: #f2f2f2;
+  color: rgb(80,80,80);
 }
+
+.search-box{
+  padding: 1% 0;
+  color: rgb(80,80,80);
+  
+}
+
 .search-box .go-icon{
   position: absolute;
   right: 10px;
   top: 50%;
   transform: translateY(-50%);
-  line-height: 60px;
-  width: 70px;
-  background: #171c24;
+  line-height: 40px;
+  width: 50px;
   border: none;
   outline: none;
   color: #fff;
   font-size: 20px;
   cursor: pointer;
+  border-radius: 250px;
+  background: rgb(80,80,80);
 }
 .wrapper input[type="checkbox"]{
   display: none;
@@ -115,7 +121,6 @@ nav .content .links{
 /* Dropdown Menu code start */
 .content .links ul{
   position: absolute;
-  background: #171c24;
   top: 80px;
   z-index: -1;
   opacity: 0;
@@ -173,7 +178,6 @@ nav .content .links{
   nav .content .links{
     display: block;
     position: fixed;
-    background: #14181f;
     height: 100%;
     width: 100%;
     top: 70px;
