--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -7,8 +7,10 @@
   font-family: 'Poppins', sans-serif;
 }
 .wrapper{
-  position: fixed;
+  position: sticky;
   width: 100%;
+  background: rgba(25,25, 25, 1);
+
 }
 .wrapper nav{
   position: relative;
@@ -18,6 +20,7 @@
   height: 70px;
   align-items: center;
   justify-content: space-between;
+  
 }
 nav .content{
   display: flex;
@@ -60,6 +63,7 @@ nav .content .links{
   line-height: 70px;
   width: 70px;
   text-align: center;
+  transition: 0.2s ease;
 }
 .wrapper .menu-icon{
   display: none;
@@ -80,6 +84,11 @@ nav .content .links{
   opacity: 1;
   pointer-events: auto;
 }
+
+.links li p:hover{
+  font-size: 1.5rem;
+}
+
 .search-box input{
   width: 100%;
   height: 100%;
