--- a/src/Components/Layout/HomeSection/HomeSection.css
+++ b/src/Components/Layout/HomeSection/HomeSection.css
@@ -51,21 +51,21 @@
 }
 
 .search-home-submit{
-    color: #FFFFFF;
     font-weight: bolder;
     font-size: 105%;
     width: 14%;
     padding: 1% 2%;
     border-radius: 30px;
     border: none;
-    background: #1FCCFC;
     transition: .5s ease;
+    color: rgb(89,228,168) ;
+    background : rgb(37,46,53);
 }
 
 .search-home-submit:hover{
-    color: #1FCCFC;
-    background: #FFFFFF;
-    transform: scale(102%);
+    background: rgb(89,228,168) ;
+    color : rgb(37,46,53);
+    transform: scale(105%);
 }
 
 .content-page-info{
