--- a/src/Components/Page/Page404/Page404.css
+++ b/src/Components/Page/Page404/Page404.css
@@ -1,65 +1,21 @@
 .not-found-container{
     width: 100%;
-    background-color: red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2%;
-    background: aliceblue;
+    padding: 5%;
+    background-color: aliceblue;
 }
 
 .not-found{
-    width: 95%;
+    width: 100%;
     background: #FFFFFF;
     display: flex;
-    -webkit-box-shadow: 1px 7px 15px -5px #333333; 
-    box-shadow: 1px 7px 15px -5px #333333;
+    -webkit-box-shadow: 1px 4px 15px -4px #383838; 
+    box-shadow: 1px 4px 15px -4px #383838;
 }
 
 .info-error{
+    padding: 2%;
     width: 40%;
     text-align: center;
-    padding: 5% 0;
-}
-
-.error-title{
-    font-size: 6rem;
-}
-
-.error-subtitle{
-    font-weight: bolder;
-    color: rgba(30,30,30,0.50);
-    width: 100%;
-    margin: 0 0 15% 0;
-}
-
-.error-subtitled{
-    font-weight: bolder;
-    color: rgba(30,30,30,0.50);
-    width: 100%;
-    margin: 0 0 0 0;
-}
-
-.error-relink{
-    border-radius: 5px;
-    border: none;
-    width: 80%;
-    margin: 4%;
-    padding: 3% 0;
-    font-weight: bolder;
-    font-size: 110%;
-    color: rgba(28,46,53,1);
-    background: rgba(90,228,167,1);
-    -webkit-box-shadow: 1px 7px 15px -5px #333333; 
-    box-shadow: 1px 7px 10px -5px #333333;
-    cursor: pointer;
-    transition: 0.4s ease;
-}
-
-.error-relink:hover{
-    color: rgba(90,228,167,1);
-    background:rgba(28,46,53,1);
-    transform: scale(102%);
 }
 
 .error-image-container{
@@ -72,3 +28,88 @@
     height: 100%;
     object-fit: contain;
 }
+
+.error-title{
+    font-size: 550%;
+    margin: 0 0 5% 0;
+}
+
+.error-relink{
+    width: 80%;
+    margin: 20% 0 0 0;
+    padding: 3%;
+    border-radius: 5px;
+    border: none;
+    font-weight: bolder;
+    font-size: 110%;
+    color: rgb(89,228,168) ;
+    background : rgb(37,46,53);
+    -webkit-box-shadow: -1px 7px 15px -4px #383838; 
+    box-shadow: -1px 7px 15px -4px #383838;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.error-relink:hover{
+    
+    background: rgb(89,228,168) ;
+    color : rgb(37,46,53);
+    padding: 3.3%;
+}
+
+@media screen and (max-width: 1180px){
+    .error-title{
+        font-size: 450%;
+    }
+}
+
+@media screen and (max-width: 940px){
+    .error-title{
+        font-size: 300%;
+    }
+
+    .error-relink{
+        font-size: 80%;
+    }
+}
+
+@media screen and (max-width: 640px){
+    .error-title{
+        font-size: 300%;
+    }
+
+    .not-found{
+        flex-direction: column-reverse;
+    }
+
+    .error-image-container{
+        width: 100%;
+    }
+
+    .info-error{
+        width: 100%;
+        margin: -2% 0 0 0;
+    }
+
+    .error-title{
+        margin: 0;
+    }
+
+    .error-relink{
+        margin: 10%;
+    }
+
+    .error-subtitle{
+        width: 95%;
+        margin: 2% auto;
+        font-size: 90%;
+    }
+    
+    .not-found-container{
+        padding: 15% 0;
+
+    }
+}
+
+
+
