--- a/src/Components/Layout/RegisterFooter/RegisterFooter.css
+++ b/src/Components/Layout/RegisterFooter/RegisterFooter.css
@@ -37,6 +37,14 @@
     font-size: 90%;
     color: rgba(154,204,207,1);
 }
+.footer-textInfo{
+    text-decoration: none;
+    color: rgba(154,204,207,1);
+}
+.footer-textInfo:hover{
+    text-decoration: none;
+    color: rgba(154,204,207,1);
+}
 
 @media screen and (max-width: 900px){
     .footer-relinks{
