--- a/src/Components/UI/CategoriesBar/CategoriesBar.css
+++ b/src/Components/UI/CategoriesBar/CategoriesBar.css
@@ -1,38 +1,38 @@
 .categories-bar{
     display: flex;
-    width: 90%;
+    width: 80%;
     margin: 2% auto;
-    padding: 0 1%;
-    justify-content: space-around;    
-    
+    justify-content: center;
+    outline: solid .1px rgba(188,188,188,0.70);
 }
 
 .categories-bar-container{
-    width: 15%;
-    border-radius: 5px;
-    margin: 0 1%;
-    padding: 1.5% 0;
+    padding:3% 5%;
     text-align: center;
-    -webkit-box-shadow: 5px 5px 4px 0px #656565; 
-    box-shadow: 5px 5px 7px 0px #545454;
-    transition: 0.2s ease;
+    width: 20%;
+    transition: 0.3s ease;
+    outline: solid .1px rgba(188,188,188,0.70);
 }
 
 .categories-bar-container:hover{
-    transform: scale(102%);
-    cursor: pointer;
+    background: rgb(89,228,168) ;
 }
 
 .category-icon{
     font-size: 2.8rem;
     margin: 0 0 2% 0;
+    transition: 0.1s ease;
 }
 
-.category-one{
-    outline:solid 1px #000;
+.category-text-font{
+    transition: 0.3s ease;
 }
 
-.color-icon-one{
-    color: rgb(37,46,53);
+.categories-bar-container:hover  .category-icon ~ .category-text-font{
+    color: #FFFFFF;
+}
+
+.categories-bar-container:hover  .category-icon{
+    color: #FFFFFF;
 }
 
