retorno de jwt a traves de queryparams

--- a/src/Components/Layout/PasswordReset/PasswordReset.css
+++ b/src/Components/Layout/PasswordReset/PasswordReset.css
@@ -1,95 +1,4 @@
-.div-passwordReset {
+.separator{
     width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 2rem;
 }
-.div-infoReset {
-    background-color:#EDF1F4;
-    width: 35%;
-    padding: 1% 4% 4% 4%;
-}
-.reset-logoContainer{
-    display:flex;
-    align-items: center;
-    justify-content:start;
-    width: 100%;
-    gap: 1%;
-}
-.div-titleReset{
-    text-align:center;
-    margin-top:5%;
-    margin-bottom:5%;
-}
-.div-formReset{
-    text-align:center;
-}
-.div-formReset p{
-    text-align:justify;
-    margin-left:10%;
-}
-.div-formReset input{
-    border:none;
-    outline:none;
-    width:80%;
-    padding:10px 0px 10px 5px;
-    margin-bottom:5%;
-}
-.div-formReset button {
-    width:70%;
-    margin-top:5%;
-    padding:2%;
-    border:none;
-    background-color:#69B99D;
-}
-
-.div-formReset button:hover {
-    cursor: pointer;
-    background-color: #599b83;
-}
-
-@media screen and (max-width: 900px) {
-    .div-passwordReset {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .div-infoReset{
-        width:60%;
-    }
-    .div-titleReset h2 {
-        font-size:30px;
-    }
-    .div-titleReset p{
-        font-size:20px;
-    }
-    .div-formReset p{
-        font-size:17px;
-    }
-}
-@media screen and (max-width: 400px) {
-    .reset-logoContainer{
-        display:inline-block;
-    }
-    .reset-logoContainer h3{
-        font-size:13px;
-    }
-    .reset-logoContainer p{
-        font-size:13px;
-    }
-    .div-titleReset h2{
-        font-size:14px;
-        margin-bottom:5%;
-    }
-    .div-titleReset p{
-        font-size:11px;
-        margin-bottom:15%;
-    }
-    .div-formReset p{
-        font-size:12px;
-    }
-}
-
