--- a/src/Components/Layout/CreateAnouncement/CreateAnouncement.css
+++ b/src/Components/Layout/CreateAnouncement/CreateAnouncement.css
@@ -1,6 +1,3 @@
 .create-container{
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
+    width: 20%;
 }
