--- a/src/Components/Modal/ProfileSettings/ProfileSettings.css
+++ b/src/Components/Modal/ProfileSettings/ProfileSettings.css
@@ -1,4 +1,84 @@
 .settings-basic-info{
+    width: 90%;
+    margin: 0 auto;
     border-radius: 5px;
     background: rgba(0,0,0,0.04);
+    display :flex;
+    justify-content: start;
+    padding: 0.5em 0;
+    align-items: center;
+    box-shadow: 1px 5px 4px -4px #919191;
+    padding: 2%;
+    transition: 0.3s ease;
+    cursor: pointer;
+}
+
+.settings-basic-info:hover{
+    transform: scale(104%);
+    background: rgba(0,0,0,0.1);
+
+}
+
+.settings-profile{
+    width: 60%;
+    padding: 2% 5%;
+    text-align: start;
+}
+
+.settings-profile-name{
+    color: rgba(0,0,0,0.75);
+    font-weight: bolder;
+    font-size: 1.25em;
+}
+.send-profile-button{
+    margin: 2% 0 0 0;
+    border: none;
+    border-radius: 5px;
+    color: rgba(0,0,0,0.55);
+    font-size: 0.90em;
+}
+
+.settings-image-container{
+    height: 4.5em;
+    width: 25%;
+}
+
+.settings-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+
+}
+
+.settings-container{
+    margin: 4%;
+    display: grid;
+    gap: 2%;
+    row-gap: 5%;
+    grid-template-columns: 49% 49%;
+    grid-template-rows: 48% 48%;
+    grid-row: auto;
+}
+
+.settings-action-icon{
+    font-size: 2em;
+    color: rgba(0,0,0,0.55);
+}
+
+.settings-close{
+    box-shadow: -1px 5px 7px -2px #919191;
+    width: 92%;
+    padding: 1.2em 0;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s ease;
+    background : rgb(37,46,53);
+    color: #FFF;
+    font-size: 0.90em;
+}
+
+.settings-close:hover{
+    transform: scale(104%);
 }
