--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -3,250 +3,84 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none;
   font-family: 'Poppins', sans-serif;
 }
-.wrapper{
+
+.header-container{
+  display: flex;
+  width: 100%;
+  outline: solid 1px red;
+  justify-content: center;
+  padding: 0.6em;
   position: sticky;
   top: 0;
-  width: 100%;
-  background: rgba(25,25, 25, 1);
+  background: #FFF;
+}
 
-}
-.wrapper nav{
-  position: relative;
-  display: flex;
-  max-width: calc(100% - 200px);
-  margin: 0 auto;
-  height: 70px;
-  align-items: center;
-  justify-content: space-between;
-  
-}
-nav .content{
+.header-logo-container{
+  outline: solid 1px red;
+  width: 20%;
   display: flex;
   align-items: center;
+  padding: 0 1em;
 }
 
-.nav-header{
+.header-logo{
+  outline:solid 1px red;
+  font-weight: bolder;
+  font-size: 2em;
+
+
+}
+
+.header-actions{
+  outline: solid 1px red;
+  width: 60%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 1.4em;
 }
-nav .content .links{
-  margin-left: 80px;
+
+.header-action-button{
+  padding: 0em 2.3em;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
+
+.header-action-icon{
+  font-size: 1.8em;
+}
+
+.header-nouser-actions{
+  outline: solid 1px red;
+  width: 20%;
   display: flex;
-}
-.content .logo p{
-  color: #fff;
-  font-size: 30px;
-  font-weight: 600;
-}
-.content .links li{
-  list-style: none;
-  line-height: 30px;
-  margin: 0 1%;
-}
-.content .links li p,
-.content .links li label{
-  color: #fff;
-  font-size: 18px;
-  font-weight: 500;
-  padding: 9px 17px;
-  border-radius: 5px;
-  transition: all 0.3s ease;
-}
-.content .links li label{
-  display: none;
+  justify-content: flex-end;
+  padding: 0.5em 1em;
+  gap: 4%;
 }
 
-.wrapper .search-icon,
-.wrapper .menu-icon{
-  color: #fff;
-  font-size: 18px;
+.nouser-action{
+  outline: solid 1px red;
   cursor: pointer;
-  line-height: 70px;
-  width: 70px;
-  text-align: center;
-  transition: 0.2s ease;
-}
-.wrapper .menu-icon{
-  display: none;
-}
-.wrapper #show-search:checked ~ .search-icon i::before{
-  content: "\f00d";
-}
-.wrapper .search-box{
-  position: absolute;
-  height: 100%;
-  max-width: calc(100% - 50px);
-  width: 100%;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.4s ease;
-}
-.wrapper #show-search:checked ~ .search-box{
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.links li p:hover{
-  font-size: 1.3rem;
-}
-
-.search-box input{
-  width: 100%;
-  height: 100%;
-  border: none;
-  outline: none;
-  font-size: 17px;
-  color: rgb(80,80,80);
-  padding: 0 100px 0 15px;
+  width: 45%;
   border-radius: 5px;
-}
-.search-box input::placeholder{
-  color: rgb(80,80,80);
-}
-
-.search-box{
-  padding: 1% 0;
-  color: rgb(80,80,80);
-  
-}
-
-.search-box .go-icon{
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  line-height: 40px;
-  width: 50px;
   border: none;
-  outline: none;
-  color: #fff;
-  font-size: 20px;
-  cursor: pointer;
-  border-radius: 250px;
-  background: rgb(80,80,80);
-}
-.wrapper input[type="checkbox"]{
-  display: none;
 }
 
-
-.content .links ul{
-  position: absolute;
-  top: 80px;
-  z-index: -1;
-  opacity: 0;
-  visibility: hidden;
-}
-.content .links li:hover > ul{
-  top: 70px;
-  opacity: 1;
-  visibility: visible;
-  transition: all 0.3s ease;
-}
-.content .links ul li p{
-  display: block;
-  width: 100%;
-  line-height: 30px;
-  border-radius: 0px!important;
-}
-.content .links ul ul{
-  position: absolute;
-  top: 0;
-  right: calc(-100% + 8px);
-}
-.content .links ul li{
-  position: relative;
-}
-.content .links ul li:hover ul{
-  top: 0;
+.header-user-settings{
+  width: 80%;
+  display: flex;
+  align-items: center;
+  padding: 0 0.5em;
+  gap: 4%;
 }
 
-@media screen and (max-width: 1250px){
-  .wrapper nav{
-    max-width: 100%;
-    padding: 0 20px;
-  }
-  nav .content .links{
-    margin-left: 30px;
-  }
-  .content .links li p{
-    padding: 8px 13px;
-  }
-  .wrapper .search-box{
-    max-width: calc(100% - 100px);
-  }
-  .wrapper .search-box input{
-    padding: 0 100px 0 15px;
-  }
-}
-@media screen and (max-width: 900px){
-  .wrapper .menu-icon{
-    display: block;
-  }
-
-  .wrapper #show-menu:checked ~ .menu-icon i::before{
-    content: "\f00d";
-  }
-  nav .content .links{
-    display: block;
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    top: 70px;
-    left: -100%;
-    margin-left: 0;
-    max-width: 350px;
-    overflow-y: auto;
-    padding-bottom: 100px;
-    transition: all 0.3s ease;
-  }
-  nav #show-menu:checked ~ .content .links{
-    left: 0%;
-  }
-  .content .links li{
-    margin: 15px 20px;
-  }
-  .content .links li p,
-  .content .links li label{
-    line-height: 40px;
-    font-size: 20px;
-    display: block;
-    padding: 8px 18px;
-    cursor: pointer;
-  }
-  .content .links li p.desktop-link{
-    display: none;
-  }
-}
-
-@media screen and (max-width: 400px){
-  .wrapper nav{
-    padding: 0 10px;
-  }
-  .content .logo p{
-    font-size: 27px;
-  }
-  .wrapper .search-box{
-    max-width: calc(100% - 70px);
-  }
-  .wrapper .search-box .go-icon{
-    width: 30px;
-    right: 0;
-  }
-  .wrapper .search-box input{
-    padding-right: 30px;
-  }
-}
-.dummy-text{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  z-index: -1;
-  padding: 0 20px;
-  text-align: center;
-  transform: translate(-50%, -50%);
+.header-profile{
+  outline: solid .1px rgba(0,0,0,0.3);
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  border-radius: 255px;
 }
