--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -9,16 +9,15 @@
 .header-container{
   display: flex;
   width: 100%;
-  outline: solid 1px red;
   justify-content: center;
-  padding: 0.6em;
+  padding: 0 0.6em;
   position: sticky;
   top: 0;
   background: #FFF;
+  padding: 0.5em 2em;
 }
 
 .header-logo-container{
-  outline: solid 1px red;
   width: 20%;
   display: flex;
   align-items: center;
@@ -26,15 +25,11 @@
 }
 
 .header-logo{
-  outline:solid 1px red;
   font-weight: bolder;
   font-size: 2em;
-
-
 }
 
 .header-actions{
-  outline: solid 1px red;
   width: 60%;
   display: flex;
   justify-content: center;
@@ -42,27 +37,27 @@
 }
 
 .header-action-button{
-  padding: 0em 2.3em;
+  padding: 0 2.3em;
   border-radius: 5px;
   border: none;
   cursor: pointer;
+  transition: 0.4s ease ;
 }
-
+  
 .header-action-icon{
-  font-size: 1.8em;
+  font-size: 1.5em;
+  color: rgba(0,0,0,0.6)
 }
 
 .header-nouser-actions{
-  outline: solid 1px red;
   width: 20%;
   display: flex;
   justify-content: flex-end;
-  padding: 0.5em 1em;
+  padding: 0 1em;
   gap: 4%;
 }
 
 .nouser-action{
-  outline: solid 1px red;
   cursor: pointer;
   width: 45%;
   border-radius: 5px;
@@ -70,17 +65,23 @@
 }
 
 .header-user-settings{
-  width: 80%;
+  width: 50%;
   display: flex;
   align-items: center;
-  padding: 0 0.5em;
+  justify-content: flex-end;
+  padding: 0.5em;
   gap: 4%;
+  background :rgba(0,0,0,0.1);
+  border-radius: 5px;
+}
+
+.text-header-profile{
+  font-size: 1.1em;
 }
 
 .header-profile{
-  outline: solid .1px rgba(0,0,0,0.3);
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   object-fit: cover;
   border-radius: 255px;
 }
