--- a/src/Components/UI/CategoriesBar/CategoriesBar.css
+++ b/src/Components/UI/CategoriesBar/CategoriesBar.css
@@ -3,7 +3,6 @@
     width: 80%;
     margin: 2% auto;
     justify-content: center;
-    outline: solid .1px rgba(188,188,188,0.70);
 }
 
 .categories-bar-container{
@@ -12,27 +11,32 @@
     width: 20%;
     transition: 0.3s ease;
     outline: solid .1px rgba(188,188,188,0.70);
+    background: rgba(0,0,0,0.1);
 }
 
 .categories-bar-container:hover{
-    background: rgb(89,228,168) ;
+    background: rgba(0,0,0,0.6) ;
 }
 
 .category-icon{
     font-size: 2.8rem;
     margin: 0 0 2% 0;
     transition: 0.1s ease;
+    color: rgba(0,0,0,0.6);
 }
 
 .category-text-font{
     transition: 0.3s ease;
+    color: rgba(0,0,0,0.6);
 }
 
 .categories-bar-container:hover  .category-icon ~ .category-text-font{
-    color: #FFFFFF;
+    color: rgba(0,0,0,0.6);
+
 }
 
 .categories-bar-container:hover  .category-icon{
-    color: #FFFFFF;
+    color: rgba(0,0,0,0.6);
+
 }
 
