--- a/src/Components/Page/Profile/Profile.css
+++ b/src/Components/Page/Profile/Profile.css
@@ -1,75 +1,9 @@
-.profile-img-cover{
-    height: 40vh;
-}
-
-.img-profile-container{
-    margin: auto;
-    margin-top: -7%; 
-    position: relative;
-    width: 15%;
-    height: 200px;
-    border: solid 1px white;
-    border-radius: 100%;
-}
-
-.img-profile{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 100%;
-}
-
-.info-addons{
-    width: 100%;
-    text-align: center;
-    margin: 1% auto;
-}
-
-.profile-description{
-    width: 50%;
-    margin: 2% auto;
-}
-
-.profile-email{
-    font-size: 80%;
-    color: rgb(80,80,80);
-}
-
-.profile-options{
+.profile-user-container{
+    outline: solid 1px red;
     display: flex;
-    
-    width: 80%;
-    margin: 4% auto;
-    justify-content: space-between;
 }
 
-.aditional-info{
-    display: flex;
-    align-items: center;
-}
-
-.add-on{
-    width: 100%;
-    padding: 3% 20%;
-    align-items: center;
-}
-
-.add-on-border-left{
-    border-left: 1px solid rgb(80,80,80); ;
-}
-
-.add-on-border{
-    border-right: 1px solid rgb(80,80,80); ;
-    border-left: 1px solid rgb(80,80,80); ;
-}
-
-.contact-actions{
-    width: 60%;
-}
-
-.action-button{
-    padding: 2% 8%;
-    margin: 0 2%;
-    border: none;
-    border: .1px solid black
+.profile-user-info{
+    outline: solid 1px red;
+    width: 18em;
 }
