--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -37,7 +37,7 @@
 }
 
 .header-action-button{
-  padding: 0 2.3em;
+  padding: 1em 2.3em;
   border-radius: 5px;
   border: none;
   cursor: pointer;
