--- a/src/Components/Page/Profile/Profile.css
+++ b/src/Components/Page/Profile/Profile.css
@@ -1,18 +1,23 @@
 .profile-page{
-    height: 100vh;
     background: rgb(229,229,229);
 }
 
 .profile-user-container{
     outline: solid 1px red;
     display: flex;
+    height: 90vh;
+    padding: 1.5em 2.5em;
+    gap: 2em;
+    
 }
 
 .user-card{
     width: 20em;
-    margin: 1.5em;
     box-shadow: -1px 5px 7px -2px #919191;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .profile-user-info{
@@ -62,4 +67,23 @@
     border-bottom-left-radius: 5px;
     font-size: 0.9em;
     color: rgb(50,50,50);
+}
+
+/* anoucement profile */
+
+.anouncement-user-container{
+    width: 90em;
+    margin: 0 auto;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+
+.anouncement-profile-submit{
+    width: 100%;
+    background-color: rgb(255,255,255);
+    box-shadow: -1px 5px 7px -2px #919191;
+    height: 45vh;  
 }
