--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -22,6 +22,7 @@
   display: flex;
   align-items: center;
   padding: 0 1em;
+  gap: 4%;
 }
 
 .header-logo{
@@ -49,6 +50,10 @@
   background: rgba(0,0,0,0.6);
 }
 
+.logo-header{
+  width: 3em;
+  margin: -1 0 2% 0;
+}
 .header-action-icon{
   font-size: 1.5em;
   color: rgba(0,0,0,0.7);
