--- a/src/Components/Page/Profile/Profile.css
+++ b/src/Components/Page/Profile/Profile.css
@@ -11,64 +11,64 @@
     
 }
 
-.user-card{
-    width: 20em;
-    box-shadow: -1px 5px 7px -2px #919191;
-    border-radius: 5px;
+/* profile data */
+
+.user-info-tools{
+    width: 100%;
+    background-color: rgb(255,255,255);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 0.5em;
+    padding: 0.5em 2em;
 }
 
-.profile-user-info{
+.profile-data-received{
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 1em 3em;
-    background-color: rgb(255,255,255);
+    outline: solid 1px red;
+    height: 13em;
+}
+.line-profile-separator{
+    border: .1px solid rgb(0,0,0,0.3);
+    width: 100%;
+    margin: auto;
     border-radius: 5px;
+}
+
+.add-settings-account{
+    width: 60%;
+    display: flex;
+    gap: 2em;
+    align-items: center;
+}
+
+
+/* end profile */
+
+.user-card{
+    box-shadow: -1px 5px 7px -2px #919191;
 }
 
 .user-image-container{
     width: 175px;
+    outline: solid 1px red;
     height: 11em;
     margin: 0 auto;
     border-radius: 255px;
 }
 
 .profile-user-image{
+    outline: solid 1px red;
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 255px;
 }
 
-.profile-info-data{
-    padding: 0 0 0 1em;
-    margin: 1em 0;
-    display: flex;
-    flex-direction: column;
-    gap: 0.3em;
-    color: rgb(50,50,50);
-}
-    
-.add-settings-account{
-    justify-content: space-between;
-    display: flex;
-    flex-direction: column;
-}
 
-.footer-profile-container{
-    background:rgb(235,235,235);
-    padding: 1.5em;
-    text-align: center;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-    font-size: 0.9em;
-    color: rgb(50,50,50);
     
-}
+
+
+
 
 /* anoucement profile */
 
