--- a/src/Components/UI/ResultCards/ResultCards.css
+++ b/src/Components/UI/ResultCards/ResultCards.css
@@ -11,7 +11,6 @@
 
 .image-url-container{
     width: 25%;
-    outline: solid 1px red;
 }
 
 .image-url-render{
@@ -22,16 +21,27 @@
 
 .card-info-render{
     width: 75%;
-    outline: solid 1px red;
     padding: 0.4em;
 }
 
 .open-anouncement{
     padding: 1em 2em;
+    background: rgba(15,15,15,0.70);
+    color: rgb(255,255,255);
+    border: .1px solid rgb(100,100,100);
+    transition: 0.3s ease;
+    cursor: pointer;
+    border-radius: 5px;
+
+}
+
+
+.open-anouncement:hover{
+    transform: scale(102%);
+
 }
 
 .principal-render-card{
-    outline: solid 1px red;
     width: 100%;
     display: flex;
     align-items: stretch;
@@ -40,4 +50,6 @@
 .button-anouncement-redirect{
     display: flex;
     justify-content: flex-end;
+    
 }
+
