envio de datos para renderizado de anuncio guiado por idanuncio

--- a/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
+++ b/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
@@ -1,85 +1,3 @@
-.anouncement-container{
-    display: flex;
-    height: auto;
-}
-
-.anouncement-info{
-    width: 40%;
-    padding: 2% 5%;
-}
-
-.anouncement-images{
-    width: 60%;
-    padding: 2% 5%;
-}
-
-.image-container{
-    outline: solid 1px grey;
-    width: 100%;
-    height: 40vh;
-    margin: 2% 0;
-}
-
-.first-image{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.other-images{
-    width: 100%;
-    display: flex;
-    gap: 3%;
-}
-
-.other-image-container{
-    width: 20%;
-    height: 10vh;
-}
-
-.other-image{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.anouncement-info-add{
+.anouncement-info-render{
     outline: solid 1px red;
-    margin: 3% 0;
-    display: flex;
-    justify-content: space-around;
-    padding: 2% 4% ;
-}
-
-.info-text{
-    
-    padding: 1% 0;
-    text-align: center;
-}
-
-.info-title{
-    margin: 2% 0;
-}
-
-.info-subtitle{
-    margin: 2% 0;
-
-}
-
-.action-buttons{
-    display: flex;
-    justify-content: center;
-    margin: 10% 0;
-}
-
-.action-button-profile{
-    margin: 0 2%;
-    padding: 2% 10%;
-    background-color: rgb(255, 255, 255);
-    color: rgba(0, 0, 0, 0.54);
-    box-shadow: rgb(0 0 0 / 24%) 0px 2px 2px 0px, rgb(0 0 0 / 24%) 0px 0px 1px 0px;
-    border-radius: 2px;
-    border: 1px solid transparent;
-    font-size: 14px;
-    font-weight: 500;  
 }
